--- a/nginx.yaml
+++ b/nginx.yaml
@@ -11,7 +11,7 @@ spec:
     - protocol: TCP
       port: 80
       targetPort: 80
-      # nodePort: 30181
+      nodePort: 30181
 ---
 apiVersion: apps/v1
 kind: Deployment
